--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,5 +5,6 @@
 // Partials
 
 // Vendor
+@import '../node_modules/font-awesome/css/font-awesome.min.css';
 @import 'assets/stylesheets/vendor/bulma';
 
