Enable pagination on the astroid list.

--- a/src/app/asteroid/components/asteroid-detail/asteroid-detail.component.scss
+++ b/src/app/asteroid/components/asteroid-detail/asteroid-detail.component.scss
@@ -1,4 +1,6 @@
+@import '../../../../assets/stylesheets/base/variables';
 .asteroid-detail {
-  width: 70%;
   margin: 0 auto 15px auto;
+  background-color: $dark-grey;
+  color: $white;
 }
