Fix margins at bottom of the list

--- a/src/app/asteroid/components/asteroid-detail/asteroid-detail.component.scss
+++ b/src/app/asteroid/components/asteroid-detail/asteroid-detail.component.scss
@@ -1,6 +1,10 @@
 @import '../../../../assets/stylesheets/base/variables';
 .asteroid-detail {
-  margin: 0 auto 15px auto;
+  margin: 0 auto 20px auto;
+  padding: 0 20px 0 20px;
   background-color: $dark-grey;
   color: $white;
+}
+.last-item {
+  margin-bottom: 0;
 }
