AsteroidView contiainer and AsteroidResolve to display an individual asteroid's details

--- a/src/app/asteroid/components/asteroid-detail/asteroid-detail.component.scss
+++ b/src/app/asteroid/components/asteroid-detail/asteroid-detail.component.scss
@@ -4,6 +4,7 @@
   padding: 0 20px 0 20px;
   background-color: $dark-grey;
   color: $white;
+  cursor: pointer;
 }
 .last-item {
   margin-bottom: 0;
