--- a/src/app/asteroid/components/asteroid-view/asteroid-view.component.scss
+++ b/src/app/asteroid/components/asteroid-view/asteroid-view.component.scss
@@ -1,7 +1,9 @@
 .hazardous-asteroid-level {
   height: 100%;
 }
-
 .orbital-data-columns {
   margin-bottom: 0;
+}
+.close-approach-container {
+  margin-bottom: 30px;
 }
